# shell-python

./: .dockerignore  .gitignore  AGENTS.md  README.md  SPEC2CLOUD.md  apphost.cs  azure.yaml  package.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
docs/: quickstart.md
e2e/: admin.spec.ts  auth.spec.ts  fixtures.ts  landing.spec.ts  playwright.config.ts  profile.spec.ts
infra/: main.bicep  main.parameters.json  resources.bicep
infra/scripts/: postprovision.ps1  postprovision.sh  predeploy.ps1  predeploy.sh
specs/: mkdocs.yml
src/api/: Dockerfile  pyproject.toml
src/api/app/: config.py  db.py  main.py  models.py
src/api/app/middleware/: auth.py
src/api/app/routes/: admin.py  auth.py
src/api/tests/: conftest.py  test_admin.py  test_auth.py
src/web/: next.config.ts  package-lock.json  package.json
src/web/src/app/: layout.tsx  page.tsx
src/web/src/app/components/: LoginForm.tsx  NavBar.tsx  RegisterForm.tsx
src/web/src/app/hooks/: useAuth.ts
src/web/src/app/login/: page.tsx
src/web/src/app/profile/: page.tsx
src/web/src/app/register/: page.tsx
tests/features/: auth.feature  environment.py  profile.feature  rbac.feature
tests/features/steps/: admin_steps.py  auth_steps.py  shared_context.py
